--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html lang="Default">
+<!DOCTYPE html>
+<html lang="fr-fr">
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="">
@@ -46,9 +46,7 @@
 						<a href="index.html">Accueil</a>
 					</li>
 					<li>
-					</li>
-					<li>
-						<a href="page2.html">page2 &gt;</a>
+						<a href="contact.html">Nous contacter</a>
 					</li>
 				</ul>
 			</div>
@@ -162,7 +160,6 @@
 
 </div>
 <!-- Principal conteneur END -->
-    
 
 </body>
 </html>
