compression / conversion img bmp

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr-fr">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="">
@@ -18,11 +18,21 @@
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
-    <title>page2</title>
+    <title>Nous contacter</title>
 
     
 <!-- Analytics -->
- 
+ 	<!-- Global site tag (gtag.js) - Google Analytics -->
+ 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-L53B8M1W8B"></script>
+ 	<script>
+ 	  window.dataLayer = window.dataLayer || [];
+ 	  function gtag(){dataLayer.push(arguments);}
+ 	  gtag('js', new Date());
+	
+ 	  gtag('config', 'G-L53B8M1W8B');
+ 	</script>
+ 	<!-- Google Search Console -->
+ 	<meta name="google-site-verification" content="CtW_cuxCgvftSVd5KVTuKuHEmBhpqT42d6pLEOv49c4" />
 <!-- Analytics END -->
     
 </head>
