--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
+	<link rel="preload" as="font" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
     <title>Nous contacter</title>
@@ -17,7 +17,7 @@
 <!-- Analytics -->
  	<!-- Global site tag (gtag.js) - Google Analytics -->
  	<script async src="https://www.googletagmanager.com/gtag/js?id=G-L53B8M1W8B"></script>
- 	<script>
+ 	<script defer>
  	  window.dataLayer = window.dataLayer || [];
  	  function gtag(){dataLayer.push(arguments);}
  	  gtag('js', new Date());
@@ -166,10 +166,10 @@
 <!-- Principal conteneur END -->
 
     
-<script src="./js/jquery-2.1.0.js"></script>
-<script src="./js/bootstrap.js"></script>
-<script src="./js/blocs.js"></script>
+<script src="./js/jquery-2.1.0.js" ></script>
+<script src="./js/bootstrap.js" ></script>
+<script src="./js/blocs.js" ></script>
 <script src="./js/jquery.touchSwipe.js" defer></script>
-<script src="./js/gmaps.js"></script>
+<script src="./js/gmaps.js" ></script>
 </body>
 </html>
