--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="Demandes ponctuelles ou projets à long terme : l'équipe de webdesigners de La chouette agence, basée à Lyon, s'occupe de la création de site web responsive, de maquette graphique, de logotypes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<meta name="robots" content="index,follow">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
