--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!-- Analytics -->
  	<!-- Global site tag (gtag.js) - Google Analytics -->
 	 <script async src="https://www.googletagmanager.com/gtag/js?id=G-L53B8M1W8B"></script>
-	 <script defer>
+	 <script>
 	   window.dataLayer = window.dataLayer || [];
 	   function gtag(){dataLayer.push(arguments);}
 	   gtag('js', new Date());
