correction pour passer le validator

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 <!-- Analytics -->
  	<!-- Global site tag (gtag.js) - Google Analytics -->
  	<script async src="https://www.googletagmanager.com/gtag/js?id=G-L53B8M1W8B"></script>
- 	<script defer>
+ 	<script>
  	  window.dataLayer = window.dataLayer || [];
  	  function gtag(){dataLayer.push(arguments);}
  	  gtag('js', new Date());
@@ -99,7 +99,7 @@
 						<label>
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" type="email" required />
+						<input class="form-control" required />
 					</div>
 					<div class="form-group">
 						<label>
