--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,19 @@
 	<link rel="preload" as="font" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
+	<script src="./js/jquery-2.1.0.js" ></script>
+	<script src="./js/bootstrap.js" ></script>
+	<script src="./js/blocs.js" ></script>
+	<script src="./js/jquery.touchSwipe.js" defer></script>
+	<script src="./js/gmaps.js" ></script>
+
     <title>Nous contacter</title>
 
     
 <!-- Analytics -->
  	<!-- Global site tag (gtag.js) - Google Analytics -->
  	<script async src="https://www.googletagmanager.com/gtag/js?id=G-L53B8M1W8B"></script>
- 	<script>
+ 	<script defer>
  	  window.dataLayer = window.dataLayer || [];
  	  function gtag(){dataLayer.push(arguments);}
  	  gtag('js', new Date());
@@ -39,7 +45,7 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="paris web design logo agence web meilleure agence" height="40" /></a>
+				<a class="navbar-brand" href="index.html" title="Accueil"><img src="img/la-chouette-agence.png" alt="Logo de l'entreprise La chouette agence basée à Lyon" /></a>
 				<button id="nav-toggle" aria-label="Menu" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -84,13 +90,13 @@
 			<div class="col-sm-6">
 				<form id="form_1">
 					<div class="form-group">
-						<label>
+						<label for="name">
 							Nom
 						</label>
 						<input id="name" class="form-control" required />
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="email">
 							Adresse email
 						</label>
 						<input id="email" class="form-control" type="email" required />
@@ -102,7 +108,7 @@
 						<input class="form-control" required />
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="msg">
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
 						</label><textarea id="msg" class="form-control" rows="4" cols="50" required></textarea>
 					</div> 
@@ -165,11 +171,5 @@
 </div>
 <!-- Principal conteneur END -->
 
-    
-<script src="./js/jquery-2.1.0.js" ></script>
-<script src="./js/bootstrap.js" ></script>
-<script src="./js/blocs.js" ></script>
-<script src="./js/jquery.touchSwipe.js" defer></script>
-<script src="./js/gmaps.js" ></script>
 </body>
 </html>
