--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="paris web design logo agence web meilleure agence" height="40" /></a>
+				<a class="navbar-brand" href="index.html" title="Accueil"><img src="img/la-chouette-agence.png" alt="Logo de l'entreprise La chouette agence basée à Lyon"/></a>
 				<button id="nav-toggle"
 				aria-label="Menu" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only"></span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
@@ -66,7 +66,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, agence web paris, création logo paris" />
+				<img src="img/logo.png" class="center-block image-resize-mode img-logo" alt="Logo La chouette agence, agence web basée à Lyon" />
 				<h1 class="text-center hero-bloc-text tc-orange ">
 					L'agence webdesign qui donne vie à vos projets <br>
 				</h1>
